[package]
name = "HspiceCompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
jni = {version = '0.19'}
anyhow = "1.0.65"
